--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,13 @@
-!Build/
-.last_cover_stats
-/META.yml
-/META.json
-/MYMETA.*
-*.o
-*.pm.tdy
-*.bs
+# Prove
+.prove
 
 # Devel::Cover
 cover_db/
 
 # Devel::NYTProf
+nytprof/
 nytprof.out
 
-# Dist::Zilla
+# Dizt::Zilla
+*.gz
 /.build/
-
-# Module::Build
-_build/
-Build
-Build.bat
-
-# Module::Install
-inc/
-
-# ExtUtils::MakeMaker
-/blib/
-/_eumm/
-/*.gz
-/Makefile
-/Makefile.old
-/MANIFEST.bak
-/pm_to_blib
-/*.zip
