--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name             = Excel-XSLX
+name             = Excel-XLSX
 author           = Gryphon Shafer <gryphon@cpan.org>
 license          = Artistic_2_0
 copyright_holder = Gryphon Shafer
